--- a/Эвклид/index.html
+++ b/Эвклид/index.html
@@ -395,7 +395,7 @@
     <div class="footer__container container">
       <div class="footer__nav">
         <a class="footer__logo">
-          <img src="../img/logo2.svg" alt="Логотип Эвклид" width="224" height="72">
+          <img src="img/logo2.svg" alt="Логотип Эвклид" width="224" height="72">
         </a>
         <ul class="footer__menu reset-list">
           <li class="footer__menu-item">
